--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,13 +26,25 @@ dist.jar=${dist.dir}/JSpeedWriter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.3.jar=lib/commons-beanutils-1.8.3.jar
+file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
+file.reference.commons-configuration-1.6.jar=lib/commons-configuration-1.6.jar
+file.reference.commons-digester-2.0.jar=lib/commons-digester-2.0.jar
 file.reference.commons-io-2.0.1.jar=lib/commons-io-2.0.1.jar
+file.reference.commons-lang-2.5.jar=lib/commons-lang-2.5.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.guava-r08.jar=lib/guava-r08.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.guava-r08.jar}:\
-    ${file.reference.commons-io-2.0.1.jar}
+    ${file.reference.commons-io-2.0.1.jar}:\
+    ${file.reference.commons-configuration-1.6.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-lang-2.5.jar}:\
+    ${file.reference.commons-digester-2.0.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
